updated body display to prevent element overlap

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,6 +18,10 @@
   font-family: 'VT323', monospace;
 }
 
+body {
+  display: none;
+}
+
 .fade {
   position: relative;
   width: 100%;
